ingress/digitalfrontiers-sample-definition.yml
apiVersion: v1
kind: Namespace
metadata:
  name: digitalfrontiers-sample
spec: {}
status: {}
