ingress/frontend-ingress-definition.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: digitalfrontiers-sample
spec:
  rules:
    - host: sample-service.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-svc
              servicePort: 80
          # - path: /api # and so on.
          #   backend:
          #     serviceName: backend-svc
          #     servicePort: 80
